--- a/index.html
+++ b/index.html
@@ -67,10 +67,15 @@ function deleteAllAccounts() {
   if (confirm("Bạn có chắc chắn muốn xoá toàn bộ dữ liệu tài khoản?")) {
     db.ref("accounts").remove().then(() => {
       Object.keys(accounts).forEach(k => delete accounts[k]);
-      updateStats();
       document.getElementById("accountList").innerHTML = "<div class='stat'>Không còn tài khoản chưa sử dụng</div>";
+      updateStats();
+      updateLastDisplay();
       alert("🗑️ Đã xoá toàn bộ dữ liệu tài khoản");
     }).catch((err) => {
+      alert("❌ Lỗi khi xoá dữ liệu: " + err.message);
+    });
+  }
+}.catch((err) => {
       alert("❌ Lỗi khi xoá dữ liệu: " + err.message);
     });
   }
