--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quản lý tài khoản & Clipboard (Realtime)</title>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js">function copyLast(id) {
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  
+<script>
+function copyLast(id) {
   const value = document.getElementById(id).textContent;
   navigator.clipboard.writeText(value);
 }
@@ -77,7 +80,6 @@ function deleteAllAccounts() {
   }
 }
 </script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <style>
     body { font-family: sans-serif; max-width: 800px; margin: 30px auto; background: #f4f9ff; padding: 20px; border-radius: 12px; }
     h2 { border-bottom: 2px solid #ccc; padding-bottom: 5px; margin-top: 30px; }
