--- a/index.html
+++ b/index.html
@@ -205,7 +205,12 @@ function deleteAllAccounts() {
           });
         }
       });
-      alert("✅ Đã nhập từ TXT thành công!");
+      alert(`✅ Đã nhập từ TXT thành công!
+Tổng số dòng đã thêm: ${lines.filter(line => {
+  const p = parseLine(line);
+  const key = `${p[0]}|${p[1]}|${p[2]}`;
+  return p.length >= 4 && !existingKeys.has(key);
+}).length}`);
     });
   };
   r.readAsText(f);
