--- a/index.html
+++ b/index.html
@@ -5,279 +5,155 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quản lý tài khoản & Clipboard (Realtime)</title>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  
-<script>
-function copyLast(id) {
-  const value = document.getElementById(id).textContent;
-  navigator.clipboard.writeText(value);
-}
-function updateLastDisplay() {
-  const last = Object.values(accounts).filter(a => !a.copied).at(0);
-  if (!last) return;
-  document.getElementById("lastUsername").textContent = last.username;
-  document.getElementById("lastPassword").textContent = last.password;
-  document.getElementById("lastEmail").textContent = last.email;
-  document.getElementById("lastEmailPass").textContent = last.emailPass;
-}
-function updateIdAppleForAll() {
-  const idApple = document.getElementById("inputIdApple").value.trim();
-  const idApplePass = document.getElementById("inputIdApplePass").value.trim();
-  if (!idApple && !idApplePass) return alert("Vui lòng nhập ít nhất một trường!");
-
-  db.ref("config/idApple").set({ idApple, idApplePass }, (error) => {
-    if (!error) {
-      document.getElementById("displayIdApple").textContent = idApple || "-";
-      document.getElementById("displayIdApplePass").textContent = idApplePass || "-";
-    }
-  });
-
-  Object.entries(accounts).forEach(([id, acc]) => {
-    const updates = {};
-    if (idApple) updates.idApple = idApple;
-    if (idApplePass) updates.idApplePass = idApplePass;
-    db.ref(`accounts/${id}`).update(updates);
-  });
-
-  alert("✅ Đã lưu ID Apple cho tất cả tài khoản");
-}
-function copyText(id) {
-  const text = document.getElementById(id).textContent;
-  navigator.clipboard.writeText(text);
-}
-function updateDisplayIdApple(id, pass) {
-  document.getElementById("displayIdApple").textContent = id || "-";
-  document.getElementById("displayIdApplePass").textContent = pass || "-";
-}
-function fetchGlobalIdApple() {
-  db.ref("config/idApple").on("value", snap => {
-    const data = snap.val();
-    if (!data) return;
-    document.getElementById("inputIdApple").value = data.idApple || "";
-    document.getElementById("inputIdApplePass").value = data.idApplePass || "";
-    updateDisplayIdApple(data.idApple, data.idApplePass);
-  });
-}
-function clearIdApple() {
-  if (!confirm("Bạn có chắc chắn muốn xoá ID Apple không?")) return;
-  db.ref("config/idApple").remove();
-  document.getElementById("inputIdApple").value = "";
-  document.getElementById("inputIdApplePass").value = "";
-  document.getElementById("displayIdApple").textContent = "-";
-  document.getElementById("displayIdApplePass").textContent = "-";
-  alert("🗑️ Đã xoá ID Apple");
-}
-function deleteAllAccounts() {
-  if (confirm("Bạn có chắc chắn muốn xoá toàn bộ dữ liệu tài khoản?")) {
-    db.ref("accounts").remove().then(() => {
-      Object.keys(accounts).forEach(k => delete accounts[k]);
-      document.getElementById("accountList").innerHTML = "<div class='stat'>Không còn tài khoản chưa sử dụng</div>";
-      updateStats();
-      updateLastDisplay();
-      alert("🗑️ Đã xoá toàn bộ dữ liệu tài khoản");
-    }).catch((err) => {
-      alert("❌ Lỗi khi xoá dữ liệu: " + err.message);
-    });
-  }
-}
-</script>
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: 30px auto; background: #f4f9ff; padding: 20px; border-radius: 12px; }
-    h2 { border-bottom: 2px solid #ccc; padding-bottom: 5px; margin-top: 30px; }
-    .stat, .controls { margin: 10px 0; font-weight: bold; }
-    .stats-bar { display: flex; justify-content: space-between; margin: 10px 0; }
-    .field, .account-box { margin: 8px 0; background: #fff; padding: 10px; border-radius: 6px; }
-    .field { display: flex; justify-content: space-between; align-items: center; background: #eef2f7; }
-    button { margin: 6px 5px 10px 0; padding: 6px 12px; cursor: pointer; }
-    .delete-btn { background: red; color: white; border: none; border-radius: 6px; }
-    input[type="file"] { margin: 8px 0; }
-  </style>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 </head>
 <body>
-  <h2>Tác vụ 1: Dán nội dung từ clipboard</h2>
-  <div class="stat">Số dòng đã dán: <span id="clipboardCount">0</span></div>
-  <button onclick="pasteNote()">📋 Dán</button>
-  <button onclick="exportNotes()">📄 Xuất .txt</button>
-  <ul id="noteList"></ul>
+  <h1>Quản lý Tài khoản</h1>
 
-  <h2>Tác vụ 2: Quản lý tài khoản</h2>
-  <div class="stats-bar">
-    <span>Chưa dùng: <span id="accountTotal">0</span></span>
-    <span>Đã dùng: <span id="accountCopied">0</span></span>
+  <!-- Tác vụ 1: Dán clipboard -->
+  <textarea id="pasteArea" rows="6" cols="60" placeholder="Dán nội dung tài khoản ở đây..."></textarea>
+  <br>
+  <button onclick="exportClipboardContent()">📤 Xuất TXT từ nội dung đã dán</button>
+  <div id="clipboardResult" style="margin-top:10px;"></div>
+  <button onclick="pasteFromClipboard()">📋 Dán từ Clipboard</button>
+
+  <!-- Upload TXT -->
+  <input type="file" id="txtUpload">
+
+  <!-- Hiển thị tài khoản ngẫu nhiên -->
+  <div id="accountDisplay">
+    <div>Tên đăng nhập: <span id="lastUsername"></span> <button onclick="copyLast('lastUsername')">Copy</button></div>
+    <div>Mật khẩu: <span id="lastPassword"></span> <button onclick="copyLast('lastPassword')">Copy</button></div>
+    <div>Email: <span id="lastEmail"></span> <button onclick="copyLast('lastEmail')">Copy</button></div>
+    <div>Mật khẩu Email: <span id="lastEmailPass"></span> <button onclick="copyLast('lastEmailPass')">Copy</button></div>
   </div>
-  <div class="controls">
-    <button onclick="filterAccounts(false)">Hiện tài khoản chưa dùng</button>
-    <button onclick="filterAccounts(true)">Hiện tài khoản đã dùng</button>
-  </div>
-  <input type="file" id="txtUpload" accept=".txt">
-<button onclick="deleteAllAccounts()" style="background:red; color:white">🗑️ Xoá toàn bộ dữ liệu</button>
-  <button onclick="exportAccounts()">📄 Xuất .txt</button>
-  <div class="stat">Dữ liệu đang hiển thị:</div>
-  <div class="account-box">
-    <div class="field"><span>Tên đăng nhập</span><span id="lastUsername">-</span><button onclick="copyLast('lastUsername')">Copy</button></div>
-    <div class="field"><span>Mật khẩu</span><span id="lastPassword">-</span><button onclick="copyLast('lastPassword')">Copy</button></div>
-    <div class="field"><span>Email</span><span id="lastEmail">-</span><button onclick="copyLast('lastEmail')">Copy</button></div>
-    <div class="field"><span>Mật khẩu Email</span><span id="lastEmailPass">-</span><button onclick="copyLast('lastEmailPass')">Copy</button></div>
-  </div>
-  <div style="margin-top: 20px;">
-  <label>ID Apple: <input type="text" id="inputIdApple" placeholder="Nhập ID Apple"></label>
-  <label style="margin-left: 10px;">Mật khẩu ID Apple: <input type="text" id="inputIdApplePass" placeholder="Nhập mật khẩu"></label>
+
+  <!-- Thông tin ID Apple -->
+  <h3>ID Apple dùng chung</h3>
+  <input id="inputIdApple" placeholder="ID Apple">
+  <input id="inputIdApplePass" placeholder="Mật khẩu ID Apple">
   <button onclick="updateIdAppleForAll()">Lưu ID Apple</button>
-<button onclick="clearIdApple()" style="background:red; color:white;">Xoá ID Apple</button>
+  <button onclick="clearIdApple()">Xoá ID Apple</button>
+  <div>ID Apple: <span id="displayIdApple">-</span> <button onclick="copyText('displayIdApple')">Copy</button></div>
+  <div>Mật khẩu ID Apple: <span id="displayIdApplePass">-</span> <button onclick="copyText('displayIdApplePass')">Copy</button></div>
 
-  <div class="field" style="margin-top: 10px;">
-    <span>ID Apple:</span>
-    <span id="displayIdApple">-</span>
-    <button onclick="copyText('displayIdApple')">Copy</button>
-  </div>
-  <div class="field">
-    <span>Mật khẩu ID Apple:</span>
-    <span id="displayIdApplePass">-</span>
-    <button onclick="copyText('displayIdApplePass')">Copy</button>
-  </div>
-</div>
-  <div id="accountList"></div>
+  <!-- Xoá toàn bộ -->
+  <button onclick="deleteAllAccounts()">🗑️ Xoá toàn bộ dữ liệu</button>
 
+  <!-- Firebase Config + Script -->
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyA7abH9ttrzdGHEs3UoRKnrNKamO-s8K9Q",
-      authDomain: "hoangcoka123-7bb54.firebaseapp.com",
-      databaseURL: "https://hoangcoka123-7bb54-default-rtdb.firebaseio.com",
-      projectId: "hoangcoka123-7bb54",
-      storageBucket: "hoangcoka123-7bb54.appspot.com",
-      messagingSenderId: "615010120621",
-      appId: "1:615010120621:web:3c55dcbf857d4e826f2724"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-    const accounts = {}; let filterCopied = null;
-
-    function pasteNote() {
-      navigator.clipboard.readText().then(text => {
-        if (!text) return;
-        db.ref("clipboardNotes").push(text);
-      });
-    }
-    function exportNotes() {
-      db.ref("clipboardNotes").once("value", snap => {
-        const content = Object.values(snap.val() || {}).join("\n");
-        const blob = new Blob([content], { type: "text/plain" });
-        const a = document.createElement("a");
-        a.href = URL.createObjectURL(blob);
-        a.download = "notes.txt"; a.click();
-      });
-    }
-    db.ref("clipboardNotes").on("value", snap => {
-      const data = snap.val() || {};
-      document.getElementById("clipboardCount").textContent = Object.keys(data).length;
-      const list = document.getElementById("noteList");
-      list.innerHTML = "";
-      Object.values(data).forEach(text => {
-        const li = document.createElement("li");
-        li.textContent = text;
-        list.appendChild(li);
-      });
-    });
-
-    function updateStats() {
-      const all = Object.values(accounts);
-      document.getElementById("accountTotal").textContent = all.filter(a => !a.copied).length;
-      document.getElementById("accountCopied").textContent = all.filter(a => a.copied).length;
-    }
-    function parseLine(line) {
-      const parts = line.includes(":") ? line.split(":") : line.includes("|") ? line.split("|") : line.split(/\s+/);
-      return parts;
-    }
-    document.getElementById("txtUpload").addEventListener("change", function(e) {
-  const f = e.target.files[0];
-  if (!f) return;
-  const r = new FileReader();
-  r.onload = e => {
-    const lines = e.target.result.trim().split("\n");
-    db.ref("accounts").once("value", snap => {
-      const existing = snap.val() || {};
-      const existingKeys = new Set(Object.values(existing).map(acc => `${acc.username}|${acc.password}|${acc.email}`));
-      let addedCount = 0;
-      lines.forEach(line => {
-        const p = parseLine(line);
-        const key = `${p[0]}|${p[1]}|${p[2]}`;
-        if (p.length >= 4 && !existingKeys.has(key)) {
-          db.ref("accounts").push({
-            username: p[0], password: p[1], email: p[2], emailPass: p[3], idApple: p[4]||"", idApplePass: p[5]||"", copied: false
-          });
-          addedCount++;
-        }
-      });
-      alert(`✅ Đã nhập từ TXT thành công!
-Tổng số dòng đã thêm: ${addedCount}`);
-      filterCopied = false;
-      renderAccounts();
-      updateStats();
-    });
+  const firebaseConfig = {
+    apiKey: "AIzaSyA7abH9ttrzdGHEs3UoRKnrNKamO-s8K9Q",
+    authDomain: "hoangcoka123-7bb54.firebaseapp.com",
+    projectId: "hoangcoka123-7bb54",
+    storageBucket: "hoangcoka123-7bb54.appspot.com",
+    messagingSenderId: "615010120621",
+    appId: "1:615010120621:web:3c55dcbf857d4e826f2724"
   };
-  r.readAsText(f);
-});
-    db.ref("accounts").on("value", snap => {
-      const data = snap.val() || {};
-      Object.keys(accounts).forEach(k => delete accounts[k]);
-      Object.assign(accounts, data);
-      updateStats(); renderAccounts(); updateLastDisplay(); fetchGlobalIdApple();
-    });
-    function renderAccounts() {
-  const list = document.getElementById("accountList");
-  list.innerHTML = "";
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
 
-  const unused = Object.entries(accounts).filter(([id, acc]) => !acc.copied);
-  if (unused.length === 0) {
-    list.innerHTML = '<div class="stat">Không còn tài khoản chưa sử dụng</div>';
-    return;
+  let accounts = {};
+  let filterCopied = false;
+
+  function parseLine(line) {
+    return line.includes(':') ? line.split(':') : line.includes('|') ? line.split('|') : line.trim().split(/\s+/);
   }
 
-  const [id, acc] = unused[Math.floor(Math.random() * unused.length)];
-  // db.ref(`accounts/${id}/copied`).set(true);
-
-  const box = document.createElement("div");
-  box.className = "account-box";
-
-  [
-    { label: "Tên đăng nhập", value: acc.username, id: "lastUsername" },
-    { label: "Mật khẩu", value: acc.password, id: "lastPassword" },
-    { label: "Email", value: acc.email, id: "lastEmail" },
-    { label: "Mật khẩu Email", value: acc.emailPass, id: "lastEmailPass" }
-  ].forEach(field => {
-    const row = document.createElement("div");
-    row.className = "field";
-    const label = document.createElement("span");
-    label.textContent = field.label;
-    const valueSpan = document.createElement("span");
-    valueSpan.textContent = field.value;
-    valueSpan.id = field.id;
-    const btn = document.createElement("button");
-    btn.textContent = "Copy";
-    btn.onclick = () => navigator.clipboard.writeText(field.value);
-    row.append(label, valueSpan, btn);
-    box.appendChild(row);
+  document.getElementById("txtUpload").addEventListener("change", function(e) {
+    const f = e.target.files[0];
+    if (!f) return;
+    const r = new FileReader();
+    r.onload = e => {
+      const lines = e.target.result.trim().split("\n");
+      db.ref("accounts").once("value", snap => {
+        const existing = snap.val() || {};
+        const existingKeys = new Set(Object.values(existing).map(acc => `${acc.username}|${acc.password}|${acc.email}`));
+        let addedCount = 0;
+        lines.forEach(line => {
+          const p = parseLine(line);
+          const key = `${p[0]}|${p[1]}|${p[2]}`;
+          if (p.length >= 4 && !existingKeys.has(key)) {
+            db.ref("accounts").push({
+              username: p[0], password: p[1], email: p[2], emailPass: p[3], copied: false
+            });
+            addedCount++;
+          }
+        });
+        alert(`✅ Đã nhập từ TXT thành công!\nTổng số dòng đã thêm: ${addedCount}`);
+        filterCopied = false;
+        setTimeout(() => {
+          renderAccounts();
+          updateStats();
+        }, 1000);
+      });
+    };
+    r.readAsText(f);
   });
 
-  list.appendChild(box);
-  updateStats();
-      
-        
-    }
-    function filterAccounts(val) {
-      filterCopied = val;
-      renderAccounts();
-    }
-    function exportAccounts() {
-  const filtered = Object.values(accounts).filter(acc => filterCopied === null || acc.copied === filterCopied);
-  const content = filtered.map(acc => `${acc.username}:${acc.password}:${acc.email}:${acc.emailPass}:${acc.idApple}:${acc.idApplePass}`).join("\n");
+  function renderAccounts() {
+    const unused = Object.entries(accounts).filter(([_, acc]) => !acc.copied);
+    const random = unused[Math.floor(Math.random() * unused.length)];
+    if (!random) return;
+    const acc = random[1];
+    document.getElementById("lastUsername").textContent = acc.username;
+    document.getElementById("lastPassword").textContent = acc.password;
+    document.getElementById("lastEmail").textContent = acc.email;
+    document.getElementById("lastEmailPass").textContent = acc.emailPass;
+  }
+
+  function exportClipboardContent() {
+  const content = document.getElementById("pasteArea").value;
   const blob = new Blob([content], { type: "text/plain" });
-  const url = URL.createObjectURL(blob);
   const a = document.createElement("a");
-  a.href = url;
-  a.download = filterCopied ? "used-accounts.txt" : "unused-accounts.txt";
+  a.href = URL.createObjectURL(blob);
+  a.download = "clipboard_export.txt";
   a.click();
-  URL.revokeObjectURL(url);
-    }
+}
+
+function updateStats() {
+    const all = Object.values(accounts);
+    const used = all.filter(a => a.copied).length;
+    const unused = all.length - used;
+    console.log(`📊 Đã dùng: ${used}, Chưa dùng: ${unused}`);
+  }
+
+  db.ref("accounts").on("value", snap => {
+    accounts = snap.val() || {};
+    if (!filterCopied) renderAccounts();
+    updateStats();
+  });
+  fetchGlobalIdApple();
+
+  function pasteFromClipboard() {
+    document.getElementById("clipboardResult").innerText = "";
+    navigator.clipboard.readText().then(text => {
+      const lines = text.trim().split("
+");
+      document.getElementById("pasteArea").value = text;
+      db.ref("accounts").once("value", snap => {
+        const existing = snap.val() || {};
+        const existingKeys = new Set(Object.values(existing).map(acc => `${acc.username}|${acc.password}|${acc.email}`));
+        let addedCount = 0;
+        lines.forEach(line => {
+          const p = parseLine(line);
+          const key = `${p[0]}|${p[1]}|${p[2]}`;
+          if (p.length >= 4 && !existingKeys.has(key)) {
+            db.ref("accounts").push({
+              username: p[0], password: p[1], email: p[2], emailPass: p[3], copied: false
+            });
+            addedCount++;
+          }
+        });
+        document.getElementById("clipboardResult").innerText = `✅ Đã dán từ Clipboard thành công!
+Tổng số dòng đã thêm: ${addedCount}`;
+        filterCopied = false;
+          renderAccounts();
+          updateStats();
+        }, 1000);
+      });
+    });
+  }
   </script>
 </body>
 </html>
